fixed card picture spacing

--- a/main.css
+++ b/main.css
@@ -12,9 +12,8 @@ main .row {
 }
 
 .card-pic {
-  height: 300px;
-  text-align: center;
-  padding-top: 20px;
+  height: 100%;
+  width: 100%
 }
 
 * {
